[tool.poetry]
name = "opc-pyserver-chunkexplt"
version = "0.1.0"
description = "Setup with the specific server version for CVE-2022-25304"
authors = ["Peter Heller"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncua = {url = "https://github.com/FreeOpcUa/opcua-asyncio/archive/refs/tags/v1.1.4.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"